--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <a href="#" class="btn btn--white">Discover Now</a>
       </div>
     </header>
-    <section class="grid-test">
+    <main></main>
+
+    <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
         <div class="col-1-of-2">Col 1 of 2</div>
@@ -57,6 +59,6 @@
         <div class="col-1-of-4">Col 1 of 4</div>
         <div class="col-3-of-4">Col 3 of 4</div>
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
