--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+    <link rel="icon" type="image/png" href="img/favicon.png" />
 
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
@@ -28,7 +28,19 @@
         <a href="#" class="btn btn--white">Discover Now</a>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-8">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">Text content</div>
+          <div class="col-1-of-2">Image composition</div>
+        </div>
+      </section>
+    </main>
 
     <!-- <section class="grid-test">
       <div class="row">
