--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/icon-font.css" />
+    <link rel="stylesheet" href="css/font-styles.css" />
     <link rel="stylesheet" href="css/style.css" />
+
     <link rel="icon" type="image/png" href="img/favicon.png" />
 
     <title>Natours | Exciting tours for adventurous people</title>
@@ -30,15 +31,56 @@
     </header>
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
           </h2>
         </div>
         <div class="row">
-          <div class="col-1-of-2">Text content</div>
-          <div class="col-1-of-2">Image composition</div>
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You are going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+              quaerat iure, quod in neque aliquid laborum quas expedita culpa
+              exercitationem aut veritatis earum. Hic reiciendis dolores
+              laboriosam placeat unde doloribus?
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You are going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+              quaerat iure, quod in neque aliquid laborum quas expedita culpa
+              exercitationem aut veritatis earum. Hic reiciendis dolores
+              laboriosam placeat unde doloribus?
+            </p>
+            <a href="#" class="btn-text"> Learn more &rarr; </a>
+          </div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img
+                src="./img/nat-1.jpg"
+                alt="Photo 1"
+                class="composition__photo composition__photo--p1"
+              />
+              <img
+                src="./img/nat-2.jpg"
+                alt="Photo 2"
+                class="composition__photo composition__photo--p2"
+              />
+              <img
+                src="./img/nat-3.jpg"
+                alt="Photo 3"
+                class="composition__photo composition__photo--p3"
+              />
+            </div>
+          </div>
         </div>
+      </section>
+      <section class="section-features">
+        <i class="icon-basic-world"></i>
       </section>
     </main>
 
